--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,72 @@
+aioredis==1.3.1
 appdirs==1.4.4
 asgiref==3.3.1
+async-timeout==3.0.1
+attrs==20.3.0
+autobahn==20.7.1
+Automat==20.2.0
+certifi==2020.11.8
+cffi==1.14.4
 cfgv==3.2.0
+channels==3.0.2
+channels-redis==3.2.0
+chardet==3.0.4
 click==7.1.2
+constantly==15.1.0
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==3.2.1
+daphne==3.0.1
+defusedxml==0.7.0rc1
 distlib==0.3.1
 Django==3.1.3
 django-cors-headers==3.5.0
 django-environ==0.4.5
 django-filter==2.4.0
+django-redis==4.12.1
+django-templated-mail==1.1.1
 djangorestframework==3.12.2
+djangorestframework-simplejwt==4.6.0
+djoser==2.1.0
 filelock==3.0.12
 gunicorn==20.0.4
 h11==0.11.0
+hiredis==1.1.0
+hyperlink==20.0.1
 identify==1.5.10
+idna==2.10
+incremental==17.5.0
+itypes==1.2.0
+Jinja2==2.11.2
 Markdown==3.3.3
+MarkupSafe==1.1.1
+msgpack==1.0.0
 nodeenv==1.5.0
+oauthlib==3.1.0
 pre-commit==2.9.0
 psycopg2-binary==2.8.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+PyHamcrest==2.0.2
+PyJWT==1.7.1
+pyOpenSSL==20.0.0
+python3-openid==3.2.0
 pytz==2020.4
 PyYAML==5.3.1
+redis==3.5.3
+requests==2.25.0
+requests-oauthlib==1.3.0
+service-identity==18.1.0
 six==1.15.0
+social-auth-app-django==4.0.0
+social-auth-core==3.3.3
 sqlparse==0.4.1
 toml==0.10.2
+Twisted==20.3.0
+txaio==20.4.1
+uritemplate==3.0.1
+urllib3==1.26.2
 uvicorn==0.12.3
 virtualenv==20.2.1
+zope.interface==5.2.0
