--- a/compose/nginx/app.conf
+++ b/compose/nginx/app.conf
@@ -1,4 +1,4 @@
-upstream django {
+upstream django_stream {
   ip_hash;
   server django:8000;
 }
@@ -8,18 +8,18 @@ server {
   client_max_body_size 500m;
   location / {
 
-    proxy_pass http://django/;
+    proxy_pass http://django_stream;
     proxy_redirect off;
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Real-IP $remote_addr;
   }
   location /ws {
-      proxy_pass http://django;
+      proxy_pass http://django_stream;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection $connection_upgrade;
-	}
+  }
   listen 8000;
   server_name localhost;
 
