--- a/compose/nginx/app.conf
+++ b/compose/nginx/app.conf
@@ -1,5 +1,4 @@
 upstream django_stream {
-  ip_hash;
   server django:8000;
 }
 
@@ -18,7 +17,13 @@ server {
       proxy_pass http://django_stream;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection $connection_upgrade;
+      proxy_set_header Connection "upgrade";
+
+      proxy_redirect off;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Host $server_name;
   }
   listen 8000;
   server_name localhost;
