--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiohttp==3.6.3
 aioredis==1.3.1
 appdirs==1.4.4
 asgiref==3.3.1
@@ -18,6 +19,7 @@ coreschema==0.0.4
 cryptography==3.2.1
 daphne==3.0.1
 defusedxml==0.7.0rc1
+discord.py==1.5.1
 distlib==0.3.1
 Django==3.1.3
 django-cors-headers==3.5.0
@@ -28,6 +30,7 @@ django-templated-mail==1.1.1
 djangorestframework==3.12.2
 djangorestframework-simplejwt==4.6.0
 djoser==2.1.0
+drf-tracking==1.5.0
 filelock==3.0.12
 gunicorn==20.0.4
 h11==0.11.0
@@ -42,6 +45,7 @@ Jinja2==2.11.2
 Markdown==3.3.3
 MarkupSafe==1.1.1
 msgpack==1.0.0
+multidict==4.7.6
 nodeenv==1.5.0
 oauthlib==3.1.0
 pre-commit==2.9.0
@@ -71,4 +75,5 @@ urllib3==1.26.2
 uvicorn==0.12.3
 uvloop==0.14.0
 virtualenv==20.2.1
+yarl==1.5.1
 zope.interface==5.2.0
