--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ POSTGRES_PORT=
 POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
+DISCORD_WEBHOOK_URL=
 
 # Redis
 # ------------------------------------------------------------------------------
