--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,2 @@
 [settings]
-known_third_party = asgiref,channels,django,django_filters,environ,rest_framework,rest_framework_tracking
+known_third_party = channels,discord,django,django_filters,environ,rest_framework,rest_framework_tracking
