refactor: update whole project

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,8 @@
-SECRET_KEY=
-DEBUG=
-POSTGRES_HOST=
-POSTGRES_PORT=
-POSTGRES_DB=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-DISCORD_WEBHOOK_URL=
+SECRET_KEY=secret
+DEBUG=True
 
-# Redis
-# ------------------------------------------------------------------------------
-REDIS_HOST=redis
-REDIS_PORT=6379
-REDIS_DB_CACHE=1
+POSTGRES_HOST=psql
+POSTGRES_PORT=5432
+POSTGRES_DB=sibctf
+POSTGRES_USER=sibctf
+POSTGRES_PASSWORD=sibctf
