--- a/compose/django/Dockerfile
+++ b/compose/django/Dockerfile
@@ -1,39 +1,62 @@
-FROM python:3.8-slim-buster
+ARG PYTHON_VERSION=3.9
+
+FROM python:${PYTHON_VERSION} as python
+
+FROM python as python-build-stage
+
+ARG APP_HOME=/app
+
+# Install apt packages
+RUN apt-get update && apt-get install --no-install-recommends -y \
+  # dependencies for building Python packages
+  build-essential git \
+  # psycopg2 dependencies
+  libpq-dev
+
+COPY ./requirements.txt .
+COPY . ${APP_HOME}
+
+RUN pip wheel --wheel-dir /usr/src/app/wheels -r requirements.txt
+
+
+FROM python as python-run-stage
+
+ARG APP_HOME=/app
 
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
 
-RUN apt-get update \
-  # dependencies for building Python packages
-  && apt-get install -y build-essential libcairo2 libmagic-dev libpq-dev gettext gdal-bin libgdal-dev libpango-1.0-0 libpangocairo-1.0-0 libgdk-pixbuf2.0-0 libffi-dev shared-mime-info python3-gdal binutils libproj-dev gcc python3-dev musl-dev\
+WORKDIR ${APP_HOME}
+
+# Install required system dependencies
+RUN apt-get update && apt-get install --no-install-recommends -y \
+  # psycopg2 dependencies
+  libpq-dev git \
+  # Translations dependencies
+  gettext \
   # cleaning up unused files
   && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
   && rm -rf /var/lib/apt/lists/*
 
-# Requirements are installed here to ensure they will be cached.
-COPY ./requirements.txt /requirements.txt
-RUN pip install --no-cache-dir -r /requirements.txt
+# All absolute dir copies ignore workdir instruction. All relative dir copies are wrt to the workdir instruction
+# copy python dependency wheels from python-build-stage
+COPY --from=python-build-stage /usr/src/app/wheels  /wheels/
+COPY --from=python-build-stage ${APP_HOME} ${APP_HOME}
 
-COPY ./compose/django/entrypoint /entrypoint
+# use wheels to install python dependencies
+RUN pip install --no-cache-dir --no-index --find-links=/wheels/ /wheels/* \
+  && rm -rf /wheels/
+
+
+COPY --chown=django:django ./compose/django/entrypoint /entrypoint
 RUN sed -i 's/\r$//g' /entrypoint
 RUN chmod +x /entrypoint
 
-COPY ./compose/django/start /start
+
+COPY --chown=django:django ./compose/django/start /start
 RUN sed -i 's/\r$//g' /start
 RUN chmod +x /start
 
-COPY ./compose/django/celery/worker/start /start-celeryworker
-RUN sed -i 's/\r$//g' /start-celeryworker
-RUN chmod +x /start-celeryworker
-
-COPY ./compose/django/celery/beat/start /start-celerybeat
-RUN sed -i 's/\r$//g' /start-celerybeat
-RUN chmod +x /start-celerybeat
-
-COPY ./compose/django/celery/flower/start /start-flower
-RUN sed -i 's/\r$//g' /start-flower
-RUN chmod +x /start-flower
-
-WORKDIR /app
 
 ENTRYPOINT ["/entrypoint"]
+CMD ["/start"]
