--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,58 @@
-[mypy]
-plugins = mypy_django_plugin.main
+[flake8]
+max-complexity = 8
+max-annotations-complexity = 4
+max-line-length = 120
+max-function-length = 100
+ignore =
+    # P103 should be disabled since it threats non-format strings with braces (like default='{}')
+    # all DXXX errors should be disabled because fuck forcing stupid docstrings everywhere
+    W503, P103, D, N805,
+    # Ignore all pytest-style errors till fixed
+    PT004
+    # black handles commas
+    C812, C813, C815, C816
+    # black handles wihtespace around operators
+    E203
 
-[mypy.plugins.django-stubs]
-django_settings_module = "conf.settings"
+exclude = node_modules,env,venv,venv36,pytest.ini
+adjustable-default-max-complexity = 8
+max-adjustable-complexity = 10
+min_coverage_percents = 100
+max_parameters_amount = 10
+max_cognitive_complexity = 15
+max-returns-amount = 4
+use_class_attributes_order_strict_mode = True
+force_usefixtures = True
+allowed_assert_count = 28
+allowed_test_arguments_count = 14
+per-path-max-complexity:
+  tests/: 4
+per-file-ignores =
+  __init__.py: F401
+  tests/*: TAE001, CFQ001, CFQ002
+
+[mypy]
+python_version = 3.9
+allow_redefinition = false
+check_untyped_defs = true
+ignore_errors = false
+ignore_missing_imports = true
+implicit_reexport = false
+local_partial_types = true
+strict_optional = true
+strict_equality = true
+no_implicit_optional = true
+warn_unused_ignores = false
+warn_redundant_casts = true
+warn_unused_configs = true
+warn_unreachable = true
+warn_no_return = true
+
+[mypy-*.conftest]
+ignore_errors = True
+
+[mypy-conftest]
+ignore_errors = True
+
+[mypy-tests.*]
+ignore_errors = True
