--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,12 @@ services:
   nginx:
     image: nginx:latest
     restart: unless-stopped
+    container_name: ctf_nginx
+    networks:
+      - default
+      - ctf
     ports:
-      - "9099:8000"
+      - "9099:80"
     volumes:
       - .:/app
       - ./compose/nginx:/etc/nginx/conf.d
@@ -22,23 +26,26 @@ services:
     build:
       context: .
       dockerfile: ./compose/django/Dockerfile
-    image: medzona_django
+    container_name: ctf_django
+    networks:
+      - ctf
     depends_on:
-      - postgres
+      - psql
     env_file:
       - .env
-    command: /start
     volumes:
       - .:/app
 
-  postgres:
+  psql:
     restart: unless-stopped
-    image: mdillon/postgis
+    image: postgres:latest
+    container_name: ctf_postgres
+    networks:
+      - ctf
     env_file:
       - .env
-    volumes:
-      - ./db_dumps:/usr/src/db_dumps
-  redis:
-    restart: unless-stopped
-    image: redis:5.0
 
+
+networks:
+  ctf:
+    name: ctf_network
