--- a/compose/nginx/app.conf
+++ b/compose/nginx/app.conf
@@ -1,48 +1,32 @@
-upstream django_stream {
-  server django:8000;
-}
-
-server {
-
-  client_max_body_size 500m;
-  location / {
-
-    proxy_pass http://django_stream;
+server
+{
+  client_max_body_size 5m;
+  location /
+  {
+    proxy_pass http://django/;
     proxy_redirect off;
     proxy_set_header Host $host;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Real-IP $remote_addr;
-  }
-  location /ws {
-      proxy_pass http://django_stream;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
-
-      proxy_redirect off;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Host $server_name;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   }
   listen 80;
   server_name localhost;
 
-  location /static/ {
-
-    root /app/;
+  location /static/
+  {
+    root /src/;
     autoindex off;
   }
-  location /media/ {
-
-    root /app/;
+  location /media/
+  {
+    root /src/;
     autoindex off;
   }
-  location /sitemap.xml {
-
-    root /app/;
+  location /sitemap.xml
+  {
+    root /src/;
   }
-
 
   proxy_connect_timeout 6000;
   proxy_send_timeout 6000;
@@ -54,8 +38,8 @@ server {
 }
 
 
-map $http_upgrade $connection_upgrade {
-
+map $http_upgrade $connection_upgrade
+{
   default upgrade;
   '' close;
 }
