chore: fix nginx config

--- a/compose/nginx/app.conf
+++ b/compose/nginx/app.conf
@@ -15,17 +15,13 @@ server
 
   location /static/
   {
-    root /src/;
+    root /app/;
     autoindex off;
   }
   location /media/
   {
-    root /src/;
+    root /app/;
     autoindex off;
-  }
-  location /sitemap.xml
-  {
-    root /src/;
   }
 
   proxy_connect_timeout 6000;
