--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ djoser==2.1.0
 drf-yasg==1.20.0
 drf-access-policy==1.1.0
 drf-writable-nested==0.6.3
+argon2-cffi==21.1.0
 
 gunicorn==20.1.0
 uvicorn==0.15.0
